--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,45 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+## Development Properties
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 #spring.jpa.hibernate.ddl-auto=update
 
 #spring.mvc.static-path-pattern=${env.REPORT}
 
-spring.datasource.url=${env.MYSQL_URI}
-spring.datasource.username=${env.MYSQL_USERNAME}
-spring.datasource.password=${env.MYSQL_PASSWORD}
+#spring.datasource.url=${env.MYSQL_URI}
+#spring.datasource.username=${env.MYSQL_USERNAME}
+#spring.datasource.password=${env.MYSQL_PASSWORD}
 
-spring.mail.test-connection=${env.MAIL_TEST_CONNECTION}
-spring.mail.host=${env.MAIL_HOST}
-spring.mail.port=${env.MAIL_PORT}
-spring.mail.username=${env.MAIL_USERNAME}
-spring.mail.password=${env.MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=${env.MAIL_AUTH}
-spring.mail.properties.mail.smtp.starttls.enable=${env.MAIL_ENABLE}
-spring.mail.properties.mail.smtp.ssl.trust=${env.MAIL_SSL_TRUST}
-spring.mail.properties.mail.debug=${env.MAIL_DEBUG}
+#spring.mail.test-connection=${env.MAIL_TEST_CONNECTION}
+#spring.mail.host=${env.MAIL_HOST}
+#spring.mail.port=${env.MAIL_PORT}
+#spring.mail.username=${env.MAIL_USERNAME}
+#spring.mail.password=${env.MAIL_PASSWORD}
+#spring.mail.properties.mail.smtp.auth=${env.MAIL_AUTH}
+#spring.mail.properties.mail.smtp.starttls.enable=${env.MAIL_ENABLE}
+#spring.mail.properties.mail.smtp.ssl.trust=${env.MAIL_SSL_TRUST}
+#spring.mail.properties.mail.debug=${env.MAIL_DEBUG}
 
-spring.thymeleaf.cache=false
+#spring.thymeleaf.cache=false
+
+######################################################################################
+
+## Heroku Properties
+spring.datasource.url=${JDBC_DATABSE_URL}
+spring.datasource.username=${JDBC_DATABSE_USERNAME}
+spring.datasource.password=${JDBC_DATABSE_PASSWORD}
+
+spring.jpa.show-sql = false
+spring.jpa.generate.ddl = true
+spring.jpa.hibernate.ddl-auto = create
+        
+spring.datasource.initialization-mode=always
+
+spring.mail.test-connection=${MAIL_TEST_CONNECTION}
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=${MAIL_AUTH}
+spring.mail.properties.mail.smtp.starttls.enable=${MAIL_ENABLE}
+spring.mail.properties.mail.smtp.ssl.trust=${MAIL_SSL_TRUST}
+spring.mail.properties.mail.debug=${MAIL_DEBUG}
