--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,9 +24,9 @@
 ######################################################################################
 
 ## Heroku Properties
-spring.datasource.url=${JDBC_DATABSE_URL}
-spring.datasource.username=${JDBC_DATABSE_USERNAME}
-spring.datasource.password=${JDBC_DATABSE_PASSWORD}
+spring.datasource.url=${DATABSE_URL}
+#spring.datasource.username=${DATABSE_USERNAME}
+#spring.datasource.password=${DATABSE_PASSWORD}
 
 spring.jpa.show-sql = false
 spring.jpa.generate.ddl = true
