--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,10 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+		  <groupId>org.springframework.boot</groupId>
+		  <artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
 		<dependency>
 		    <groupId>org.apache.maven.plugins</groupId>
@@ -107,6 +111,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+			     <groupId>com.heroku.sdk</groupId>
+			     <artifactId>heroku-maven-plugin</artifactId>
+			     <version>3.0.3</version>
 			</plugin>
 		</plugins>
 	</build>
