set java ver to 11

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	</parent>
 	<groupId>sg.edu.iss</groupId>
 	<artifactId>mytrial</artifactId>
+	
 	<version>0.0.1-SNAPSHOT</version>
 	<name>mytrial</name>
 	<description>Demo project for Spring Boot</description>
@@ -116,6 +117,15 @@
 			     <groupId>com.heroku.sdk</groupId>
 			     <artifactId>heroku-maven-plugin</artifactId>
 			     <version>3.0.3</version>
+			</plugin>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-compiler-plugin</artifactId>
+			    <version>3.1</version>
+			    <configuration>
+			        <source>11</source>
+			        <target>11</target>
+			    </configuration>
 			</plugin>
 		</plugins>
 	</build>
