--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,19 +24,22 @@
 ######################################################################################
 
 ## Heroku Properties
+#java.runtime.version=11
+
 spring.datasource.url=${DATABSE_URL}
+
 #spring.datasource.username=${DATABSE_USERNAME}
 #spring.datasource.password=${DATABSE_PASSWORD}
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.maxActive=10
-spring.datasource.maxIdle=5
-spring.datasource.minIdle=2
-spring.datasource.initialSize=5
-spring.datasource.removeAbandoned=true
+#spring.datasource.maxActive=10
+#spring.datasource.maxIdle=5
+#spring.datasource.minIdle=2
+#spring.datasource.initialSize=5
+#spring.datasource.removeAbandoned=true
 
 spring.jpa.show-sql = false
-spring.jpa.generate.ddl = true
+#spring.jpa.generate.ddl = true
 spring.jpa.hibernate.ddl-auto = create
         
 spring.datasource.initialization-mode=always
