change app props

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,42 +1,42 @@
 ## Development Properties
 
-spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.datasource.url=${env.MYSQL_URI}
-spring.datasource.username=${env.MYSQL_USERNAME}
-spring.datasource.password=${env.MYSQL_PASSWORD}
-
-spring.mail.test-connection=${env.MAIL_TEST_CONNECTION}
-spring.mail.host=${env.MAIL_HOST}
-spring.mail.port=${env.MAIL_PORT}
-spring.mail.username=${env.MAIL_USERNAME}
-spring.mail.password=${env.MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=${env.MAIL_AUTH}
-spring.mail.properties.mail.smtp.starttls.enable=${env.MAIL_ENABLE}
-spring.mail.properties.mail.smtp.ssl.trust=${env.MAIL_SSL_TRUST}
-spring.mail.properties.mail.debug=${env.MAIL_DEBUG}
-
-spring.thymeleaf.cache=false
+#spring.jpa.hibernate.ddl-auto=create-drop
+#
+#spring.datasource.url=${env.MYSQL_URI}
+#spring.datasource.username=${env.MYSQL_USERNAME}
+#spring.datasource.password=${env.MYSQL_PASSWORD}
+#
+#spring.mail.test-connection=${env.MAIL_TEST_CONNECTION}
+#spring.mail.host=${env.MAIL_HOST}
+#spring.mail.port=${env.MAIL_PORT}
+#spring.mail.username=${env.MAIL_USERNAME}
+#spring.mail.password=${env.MAIL_PASSWORD}
+#spring.mail.properties.mail.smtp.auth=${env.MAIL_AUTH}
+#spring.mail.properties.mail.smtp.starttls.enable=${env.MAIL_ENABLE}
+#spring.mail.properties.mail.smtp.ssl.trust=${env.MAIL_SSL_TRUST}
+#spring.mail.properties.mail.debug=${env.MAIL_DEBUG}
+#
+#spring.thymeleaf.cache=false
 
 ######################################################################################
 
 ## Heroku Properties
 
-#spring.datasource.url=${DATABSE_URL}
-#
-#spring.datasource.driverClassName=org.postgresql.Driver
-#
-#spring.jpa.show-sql = false
-#spring.jpa.hibernate.ddl-auto = create
-#        
-#spring.datasource.initialization-mode=always
-#
-#spring.mail.test-connection=true
-#spring.mail.host=${MAIL_HOST}
-#spring.mail.port=${MAIL_PORT}
-#spring.mail.username=${MAIL_USERNAME}
-#spring.mail.password=${MAIL_PASSWORD}
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-#spring.mail.properties.mail.smtp.ssl.trust=${MAIL_SSL_TRUST}
-#spring.mail.properties.mail.debug=true
+spring.datasource.url=${DATABSE_URL}
+
+spring.datasource.driverClassName=org.postgresql.Driver
+
+spring.jpa.show-sql = false
+spring.jpa.hibernate.ddl-auto = create
+        
+spring.datasource.initialization-mode=always
+
+spring.mail.test-connection=true
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=${MAIL_SSL_TRUST}
+spring.mail.properties.mail.debug=true
