added heroku port

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,8 @@
 
 ## Heroku Properties
 
+server.port=${PORT}
+
 spring.datasource.url=${DATABSE_URL}
 
 spring.datasource.driverClassName=org.postgresql.Driver
