--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,12 +30,12 @@ spring.jpa.hibernate.ddl-auto=create
         
 spring.datasource.initialization-mode=always
 
-spring.mail.test-connection=true
-spring.mail.host=${MAIL_HOST}
-spring.mail.port=${MAIL_PORT}
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.ssl.trust=${MAIL_SSL_TRUST}
-spring.mail.properties.mail.debug=true
+#spring.mail.test-connection=true
+#spring.mail.host=${MAIL_HOST}
+#spring.mail.port=${MAIL_PORT}
+#spring.mail.username=${MAIL_USERNAME}
+#spring.mail.password=${MAIL_PASSWORD}
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.ssl.trust=${MAIL_SSL_TRUST}
+#spring.mail.properties.mail.debug=true
